# app/Http/Requests/StoreProductRequest.php
@@ -2,19 +2,8 @@
 
 namespace App\Http\Requests;
 
-use Illuminate\Foundation\Http\FormRequest;
-
-class StoreProductRequest extends FormRequest
+class StoreProductRequest extends ApiFormRequest
 {
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize()
-    {
-        return false;
-    }
 
     /**
      * Get the validation rules that apply to the request.
@@ -24,7 +13,10 @@ class StoreProductRequest extends FormRequest
     public function rules()
     {
         return [
-            //
+            'title' => 'required|string|max:255',
+            'slug' => 'nullable|string|max:255|unique:products',
+            'price' => 'required|numeric',
+            'image' => 'nullable|image|max:1024',
         ];
     }
 }
