# routes/api.php
@@ -25,5 +25,5 @@ Route::middleware('auth:api')
     ->group(function () {
         Route::get('profile', [ProfileController::class, 'show']);
         Route::post('logout', [ProfileController::class, 'logout']);
-        Route::get('products', [ProductController::class, 'index']);
+        Route::apiResource('products', ProductController::class);
     });
